--- a/_quarto.yml
+++ b/_quarto.yml
@@ -134,7 +134,7 @@ format:
     theme:
       light: [cosmo, style/info511.scss]
       dark: [cosmo, style/info511.scss, style/dark.scss]
-    linkcolor: "#378DBD" # Arizona Blue - Fall 2024
+    linkcolor: "#AB0520" # Arizona Red - Fall 2024
     toc: true
     code-copy: true
     code-overflow: wrap
