--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,7 +30,7 @@ website:
         href: https://info511fall2024.slack.com
         text: "Slack"
       - icon: camera-reels-fill
-        href: https://duke.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=b5b29027-7084-40bf-9a2f-b0cf0100bb98
+        href: https://arizona.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=61cffeec-57c6-4caa-a60a-b1c3017974d4
         text: "Class recordings"
       - icon: check-square-fill
         href: https://d2l.arizona.edu/d2l/home/1478216
