--- a/_publish.yml
+++ b/_publish.yml
@@ -1,4 +1,4 @@
 - source: project
   netlify:
-    - id: d2feef77-982d-471d-9ed8-7ff1eaea6c4f
-      url: 'https://datasciaz.netlify.app'
+    - id: d99da625-7d86-459f-a173-79ba7c7a6e1e
+      url: 'https://inspiring-kangaroo-fddad7.netlify.app'
