--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -1,4 +1,4 @@
-institute: "University of Arizona <br> INFO 511 - Fall 2024"
+institute: "University of Arizona <br> INFO 511 - Spring 2025"
 author: "Dr. Greg Chism"
 footer: "[🔗 datasciaz.netlify.app](https://datasciaz.netlify.app/)"
 logo: "images/logo.png"
